# sendBots

./: .gitignore  README.md  pyproject.toml
docs/: BUILD_WINDOWS_INSTALLER.md  MANUAL_INSTALACAO_WINDOWS.docx  MANUAL_INSTALACAO_WINDOWS.md  MANUAL_USO.docx  MANUAL_USO.md  PLANO_EXECUCAO_APLICATIVO_ENVIO.md
packaging/: installer.iss  sendbots.spec
scripts/: build_linux.sh  build_windows.ps1  install_linux.sh  run_local_linux.sh  uninstall_linux.sh
sendbots/: __init__.py  __main__.py  alowchat.py  config.py  logging_setup.py  main.py  models.py  parser.py  pdf_merge.py  renamer.py  sender.py  storage.py  tray.py  ui.py  watcher.py
tests/: test_alowchat.py  test_config.py  test_parser.py  test_renamer.py  test_sender.py  test_watcher.py
